    - cif_parse_old_star:
      - the output format from the one produced by the COD::ShowStruct
        module to the one produced by the Data::Dumper module.
    - cif_split and cif_split_primitive:
      - printing extracted file names to STDOUT instead of STDERR.
    - cif_validate:
      - validation messages are now output to STDOUT instead of STDERR.
    - COD::UserMessage:
      - the interface of print_message() and sprint_message() subroutines.
  * Removed:
    - COD::ShowStruct.
    - STAR::Parser sources.
    - sdf_add_cod_data:
      - the deprecated --tmp-dir option.
    - cif_parse_old_star script.
    - cif_printout:
      - the deprecated --output-struct option.
    - cif_validate:
      - the deprecated --debug option.

cod-tools (unreleased)

  * Changed:
    - COD::CIF::Data::AtomList:
      - rewritten dump_atoms_as_cif() using standard CIF printing routines.
    - COD::CIF::Parser::Yapp:
      - replaced the COD::ShowStruct module with Data::Dumper
        for debug prints.
    - dropped test-dependency on 'mysql' command line utility.
  * Deprecated:
    - cif_printout:
      - the --output-struct option.
    - cif_parse:
      - the output format.
    - COD::ShowStruct.
  * Fixed:
    - COD::CIF::Data::AtomList:
      - using '_space_group_name_H-M_alt' data item instead of deprecated
        '_symmetry_space_group_name_H-M' in dump_atoms_as_cif().
    - cif2cod:
      - description of command line option --use-all-datablocks.
    - cif2ref and cif_filter:
      - standardising symmetry data item recognition.
    - cif_molecule, cif_p1, cif_reduce_Niggli and oqmd2cif:
      - adding '_space_group_name_*' to the output instead of deprecated
        '_symmetry_space_group_name_*';
    - cif_split:
      - appending mode.
    - replaced 'can not' with 'cannot' in all affected scripts and modules;
    - replaced the '\d' group with explicit '[0-9]' in regular expressions
      in all affected scripts and modules.

cod-tools (2.3)

  * Added: