@@ -90,8 +90,13 @@ sub BO_2_COD {
             } elsif ( $nodeName eq "bo:name" ) { 
                 $atom{ "name" } = $nodeValue
             } else {
-                warning($0, $filename, undef, "unrecognised dictionary" . 
-                        "reference '$nodeName' -- entry line will be ignored" );
+                warning( {
+                    'program'  => $0,
+                    'filename' => $filename,
+                    'message'  =>
+                        "unrecognised dictionary reference '$nodeName' -- " .
+                        'entry line will be ignored'
+                } );
             }
         }
 
@@ -130,8 +135,13 @@ sub BO_2_COD {
             elsif ( $nodeName eq "bo:discoveryDate" ) {}
             elsif ( $nodeName eq "bo:electronicConfiguration" ) {}
             else { 
-                warning($0, $filename, undef, "Unrecognised dictionary " .
-                        "reference '$nodeName' -- entry line will be ignored" );
+                warning( {
+                    'program'  => $0,
+                    'filename' => $filename,
+                    'message'  =>
+                        "unrecognised dictionary reference '$nodeName' -- " .
+                        'entry line will be ignored'
+                } );
             }
         }
 
