@@ -109,7 +109,11 @@ sub print_parsed_msg
         }
     } else {
         chomp($msg);
-        note($0, $ARGV, undef, "unable to parse error message '$msg'", undef);
+        note( {
+            'program'  => $0,
+            'filename' => $ARGV,
+            'message'  => "unable to parse error message '$msg'"
+        } );
     }
 
     return;
