@@ -19,7 +19,8 @@ cod-tools (3.0.0)
     - cif_validate:
       - validation messages are now output to STDOUT instead of STDERR.
     - COD::UserMessage:
-      - the interface of print_message() and sprint_message() subroutines.
+      - the interface of print_message(), sprint_message(), note(), warning(),
+        error() and debug_note() subroutines.
   * Removed:
     - COD::ShowStruct.
     - STAR::Parser sources.
